# Tahan

./: .dockerignore  .gitignore  Dockerfile  README.org  USAGE.md  demo.py  docker-compose.yml  hanat_uci.py  pyproject.toml  setup.py  setup.sh  train.py
.github/workflows/: build-gpu-image.yml
hanat/: __init__.py  _cboard.py  _chess.cpp  _pyboard.py  board.py  dataset.py  engine.py  game.py  move.py  pgn.py  squares.py
hanat/engine/: __init__.py  base.py  material.py  mcts.py  random.py  stockfish.py
tests/: test_ai_engine.py  test_backend_parity.py  test_dataset.py  test_engine.py  test_mcts.py  test_perft.py  test_pgn.py  test_rules.py
